@@ -126,6 +126,7 @@
                 <div class="ib-dot"></div>
                 <div class="ib-eye"></div>
                 <div class="ib-hourglass"></div>
+                <div class="ib-close"></div>
             </div>
         </div>
     </body>
