@@ -1420,7 +1420,6 @@
 
 .ib-folder:before {
   background-color: #282828;
-  border-radius: 0;
   width: 24px;
   height: calc(24px - 3px);
   bottom: 0;
@@ -1428,7 +1427,6 @@
 
 .ib-folder:after {
   background-color: #4e4e4e;
-  border-radius: 0;
   height: 3px;
   width: 12px;
   top: 0;
@@ -1474,6 +1472,7 @@
   width: 100%;
   height: 6px;
   background-color: #282828;
+  border-radius: 0;
   bottom: 0;
 }
 
@@ -1516,6 +1515,7 @@
   width: 6px;
   height: 100%;
   background-color: #282828;
+  border-radius: 0;
   right: 0;
 }
 
@@ -1558,6 +1558,7 @@
   width: 6px;
   height: 100%;
   background-color: #282828;
+  border-radius: 0;
   left: 0;
 }
 
@@ -1600,6 +1601,7 @@
   width: 6px;
   height: 100%;
   background-color: #282828;
+  border-radius: 0;
   left: 0;
 }
 
@@ -1642,6 +1644,7 @@
   width: 6px;
   height: 100%;
   background-color: #282828;
+  border-radius: 0;
   right: 0;
 }
 
@@ -1771,6 +1774,7 @@
   border-left: 6px solid #282828;
   border-right: 6px solid #282828;
   width: 2px;
+  border-radius: 0;
   height: 100%;
   right: 0;
 }
@@ -2031,5 +2035,50 @@
   border-left: calc(24px - 12px) solid transparent;
   border-right: calc(24px - 12px) solid transparent;
   top: 0;
+}
+
+.ib-close {
+  width: 24px;
+  height: 24px;
+  display: inline-block;
+  position: relative;
+}
+
+.ib-close:hover {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.ib-close:active {
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.ib-close:before, .ib-close:after {
+  position: absolute;
+  content: "";
+}
+
+.ib-close:before, .ib-close:after {
+  left: calc((24px / 2) - 3px);
+  content: ' ';
+  height: 24px;
+  width: 6px;
+  background-color: #282828;
+  border-radius: 0;
+}
+
+.ib-close:before {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.ib-close:after {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 /*# sourceMappingURL=pureicons.css.map */
