@@ -100,3 +100,4 @@
 @import "scss/other/dot";
 @import "scss/other/eye";
 @import "scss/other/hourglass";
+@import "scss/other/close";
