@@ -16,6 +16,7 @@
         width: 100%;
         height: $border-width;
         background-color: $dark-color;
+        border-radius: $border-radius;
         bottom: 0;
     }
 }
