@@ -16,6 +16,7 @@
         width: $border-width;
         height: 100%;
         background-color: $dark-color;
+        border-radius: $border-radius;
         left: 0;
     }
 }
