@@ -5,7 +5,6 @@
 
     &:before {
         background-color: $dark-color;
-        border-radius: $border-radius;
         width: $size;
         height: calc(#{$size} - #{$border-width / 2});
         bottom: 0;
@@ -13,7 +12,6 @@
 
     &:after {
         background-color: lighten($dark-color, 15%);
-        border-radius: $border-radius;
         height: $border-width / 2;
         width: $border-width * 2;
         top: 0;
